örnek dairesel liste oluşturuldu

--- a/Project-2A/ArrayListPlayground/ArrayListPlayground/ArrayListPlayground.csproj
+++ b/Project-2A/ArrayListPlayground/ArrayListPlayground/ArrayListPlayground.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{496049A2-A57E-4085-9758-2ABF0FAEDD37}</ProjectGuid>
+    <ProjectGuid>{603ECE50-DF03-4CA0-A0EE-48ABB6EC0279}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Project2._1</RootNamespace>
-    <AssemblyName>Project2.1</AssemblyName>
+    <RootNamespace>ArrayListPlayground</RootNamespace>
+    <AssemblyName>ArrayListPlayground</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -43,7 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CircularList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
