--- a/Project-2A/Project2.2/Project2.2.csproj
+++ b/Project-2A/Project2.2/Project2.2.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Araba.cs" />
+    <Compile Include="Kuyruk.cs" />
     <Compile Include="OncelikKuyrugu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
