--- a/Project-4A/Project-4A/Project-4A.csproj
+++ b/Project-4A/Project-4A/Project-4A.csproj
@@ -69,6 +69,12 @@
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmGraph.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGraph.Designer.cs">
+      <DependentUpon>frmGraph.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMST.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,11 +95,14 @@
     <EmbeddedResource Include="frmDSP.resx">
       <DependentUpon>frmDSP.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGraph.resx">
+      <DependentUpon>frmGraph.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMST.resx">
       <DependentUpon>frmMST.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Main.resx">
-      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
